--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   persistent_bottom_nav_bar: ^3.1.0
   flutter_svg: ^0.19.0
   carousel_slider: ^2.3.1
+  carousel_pro: ^1.0.0
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,6 +72,9 @@ flutter:
     - family: English
       fonts:
         - asset: fonts/Lato-Regular.ttf
+    - family: Cambria
+      fonts:
+        - asset: fonts/Cambria.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
