--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   persistent_bottom_nav_bar: ^3.1.0
   flutter_svg: ^0.19.0
   carousel_slider: ^2.3.1
+  webview_flutter: ^1.0.7
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
