--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_svg: ^0.19.0
   carousel_slider: ^2.3.1
   webview_flutter: ^1.0.7
-
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
