--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   carousel_slider: ^2.3.1
   carousel_pro: ^1.0.0
   http: ^0.12.2
+  flutter_html: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
