--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   carousel_slider: ^2.3.1
   webview_flutter: ^1.0.7
   http: ^0.12.2
+  hexcolor: ^1.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
