--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_html: ^1.2.0
   flutter_spinkit: ^4.1.2+1
   webview_flutter: ^1.0.7
+  intl: ^0.16.1
+  email_validator: ^1.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
